--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,115 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@500&family=Source+Sans+Pro:wght@300;400;600&display=swap');
+body {
+	background-image: url(./cinema.jpg);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	
+}
+.wrapper {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+h1 {
+	font-family: 'Mukta', sans-serif;
+	color: #6F4C5B;
+	text-align: center;
+	font-size: 30px;
+	margin-top: 15px;
+	margin-bottom: 15px;
+}
+h2 {
+	margin-top: 0;
+	margin-bottom: 10px;
+}
+.container {
+	font-family: 'Source Sans Pro', sans-serif;
+	color:rgb(22, 21, 21);
+	display: flex;
+	flex-direction: column;
+	width: 490px;
+	border: 1.5px solid black;
+	padding: 20px;
+	background-color: #eee6e6e5;
+	margin-left: 40px;
+	margin-right: 40px;
+}
+p {
+	margin: 0;
+}
+.text {
+	line-height: 1.4;
+	font-weight: 300;
+}
+img {
+	margin-top: 15px;
+}
+span {
+	font-weight: 600;
+}
+.see-more {
+	font-family: 'Source Sans Pro', sans-serif;
+	background-color: #eee6e6e5;
+	border: none;
+	color: #6F4C5B;
+	font-size: 16px;
+	font-weight: 400;
+	padding: 0;
+	cursor: pointer;
+}
+.btn {
+	font-family: 'Source Sans Pro', sans-serif;
+	color:rgb(22, 21, 21);
+    text-align:center;
+    font-size:15px;
+	margin-top: 10px;
+    cursor: pointer;
+    text-decoration: none;
+    padding:10px;
+    border: 1px solid rgba(0,0,0,0.5);
+    border-bottom: 3px solid rgba(0,0,0,0.5);
+    border-radius: 3px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.5),
+    inset 0 1px rgba(255,255,255,0.3),
+    inset 0 10px rgba(255,255,255,0.2),
+    inset 0 10px 20px rgba(255,255,255,0.25),
+    inset 0 -15px 30px rgba(0,0,0,0.3);
+    -webkit-box-shadow: 0 2px 8px rgba(0,0,0,0.5),
+    inset 0 1px rgba(255,255,255,0.3),
+    inset 0 10px rgba(255,255,255,0.2),
+    inset 0 10px 20px rgba(255,255,255,0.25),
+    inset 0 -15px 30px rgba(0,0,0,0.3);
+    -moz-box-shadow: 0 2px 8px rgba(0,0,0,0.5),
+    inset 0 1px rgba(255,255,255,0.3),
+    inset 0 10px rgba(255,255,255,0.2),
+    inset 0 10px 20px rgba(255,255,255,0.25),
+    inset 0 -15px 30px rgba(0,0,0,0.3);
+}
+.btn:hover {
+    opacity: 0.7;
+    filter: alpha(opacity=70);
+    -moz-opacity:0.7;
+    -khtml-opacity: 0.7;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.btn-left, .btn-right {
+	cursor: pointer;
+	background: transparent;
+	border: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media all and (max-width:768px) {
+	body {
+		height: 1500px;
+	}
+	.container {
+		margin: 0 15px 0 15px;
+	}
+	h1 {
+		font-size: 25px;
+		margin-top: 120px;
+	}
 }
